--- a/csed.html
+++ b/csed.html
@@ -151,7 +151,47 @@
 </div>
 </div>
 </section>
+<section class="ftco-section bg-light">
+<div class="container">
+<div class="row justify-content-center pb-5 mb-3">
+<div class="col-md-7 heading-section text-center ftco-animate">
+<h2>Connect With Us</h2>
+</div>
+</div>
+<div class="row">
+<div class="col-md-4 ftco-animate">
+<div class="block-7">
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="text-center p-4">
+<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
+<a href="#" class="btn btn-primary d-block px-2 py-3">Zoom Link</a>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="block-7">
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="text-center p-4">
+<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
+
+<a href="#" class="btn btn-primary d-block px-2 py-3">Zoom Link</a>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="block-7">
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="text-center p-4">
+<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+
+<a href="#" class="btn btn-primary d-block px-2 py-3">Zoom Link</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
 
 
 
