--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <div class="testimony-wrap py-4">
 <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
 <div class="text">
-<p class="mb-4">Our vision is to be a leading establishment excelling in higher education and research in the field of Electrical and Instrumentation Engineering to meet the aspirations of global community. </p>
+<p class="mb-4">Our vision is to be a leading establishment excelling in higher education and research in the field of Electrical Engineering to meet the aspirations of global community. </p>
 <div class="d-flex align-items-center">
 <div class="user-img" style="background-image: url(images/ele.png)"></div>
 <div class="pl-3">
@@ -193,12 +193,12 @@
 <div class="testimony-wrap py-4">
 <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
 <div class="text">
-<p class="mb-4">I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders.</p>
+<p class="mb-4">We prepare our students to conceptualize, design,  implement facilities meant for catering societal needs for today and tomorrow, and that is how students understand what civil engineering is all about.</p>
 <div class="d-flex align-items-center">
-<div class="user-img" style="background-image: url(images/cse.jpg)"></div>
+<div class="user-img" style="background-image: url(images/civil.jpg)"></div>
 <div class="pl-3">
-<p class="name">Dr. Maninder Singh</p>
-<span class="position">HOD,CSE</span>
+<p class="name">Dr. Prem Pal Bansal</p>
+<span class="position">HOD,CED</span>
 </div>
 </div>
 </div>
@@ -208,12 +208,42 @@
 <div class="testimony-wrap py-4">
 <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
 <div class="text">
-<p class="mb-4">I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders.</p>
+<p class="mb-4">By joining the Department of Chemical Engineering, you will become part of an outstanding legacy and an enriching graduate program that will specialize you in highly sought after disciplines such as Chemical Engineering.</p>
 <div class="d-flex align-items-center">
-<div class="user-img" style="background-image: url(images/cse.jpg)"></div>
+<div class="user-img" style="background-image: url(images/che.jpg)"></div>
 <div class="pl-3">
-<p class="name">Dr. Maninder Singh</p>
-<span class="position">HOD,CSE</span>
+<p class="name">Dr. Haripada Bhunia</p>
+<span class="position">HOD,CHE</span>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="item">
+<div class="testimony-wrap py-4">
+<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
+<div class="text">
+<p class="mb-4">Biotechnology is a discipline that has emerged in recent times and promises to solve problems related to human health, agriculture, and industry.  </p>
+<div class="d-flex align-items-center">
+<div class="user-img" style="background-image: url(images/bio.jpg)"></div>
+<div class="pl-3">
+<p class="name">Prof. M. S. Reddy</p>
+<span class="position">HOD,BTD</span>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="item">
+<div class="testimony-wrap py-4">
+<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
+<div class="text">
+<p class="mb-4">Mechanical Engineers use the principles of science and knowledge of materials, design and manufacturing to continuously develop new technologies and products. </p>
+<div class="d-flex align-items-center">
+<div class="user-img" style="background-image: url(images/mech.jpg)"></div>
+<div class="pl-3">
+<p class="name">Dr. T.P. Singh</p>
+<span class="position">HOD,MED</span>
 </div>
 </div>
 </div>
