--- a/alumni.html
+++ b/alumni.html
@@ -59,10 +59,10 @@
 <div class="img align-self-stretch" style="background-image: url(images/alumni/aditi.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Lloyd Wilson</h3>
-<span class="position mb-2">Health Coach</span>
+<h3>Ajay Khanna</h3>
+<span class="position mb-2">Mechanical Engineer</span>
 <div class="faded">
-<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+<p>Vice president, marketing, Reltio. Worked in many organizations including Samtel, Honda Motors in India and Amdocs, Oracle, Veeva Systems in the US</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -79,10 +79,10 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-2.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Rachel Parker</h3>
-<span class="position mb-2">Life &amp; Business Coach</span>
+<h3>Gauri Singh Shandilaya</h3>
+<span class="position mb-2">1994 &amp; Civil Engineer</span>
 <div class="faded">
-<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+<p>Managing Director, Crystal Sanitary Fittings Pvt.Ltd.(ARK)</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -99,10 +99,12 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-3.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Ian Smith</h3>
-<span class="position mb-2">Executive Coach</span>
+<h3>Ajay Saran Sharma</h3>
+<span class="position mb-2">1994, Mechanical Engineer</span>
 <div class="faded">
-<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+<p>General Manager, Design Centre, Tata Motors  Maruti-Suzuki India  Daewoo Motors India  
+  M.Des., IIT-Delhi
+  ME, Mechanical, BITS-Pilani</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -119,10 +121,10 @@
 <div class="img align-self-stretch" style="background-image: url(images/alumni/aditi.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Alicia Henderson</h3>
-<span class="position mb-2">Health Coach</span>
+<h3>Manoj Malhotra</h3>
+<span class="position mb-2">1994 Civil Engineering </span>
 <div class="faded">
-<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+<p>Executive Engineer, DWSS, Punjab. Site Engineer, Siel Chemical Complex</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -139,10 +141,13 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-5.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
- <h3>Lloyd Wilson</h3>
+ <h3>Jyotsna Gupta Saxena </h3>
 <span class="position mb-2">Executive Coach</span>
 <div class="faded">
-<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+<p>1994 - EIC
+  Current designation: Self-employed
+  Current Organisation: self-employed 
+  Past designations and organizations: MT at EIL, AM at Punwire, TL at NIIT Ltd</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -159,10 +164,14 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-6.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Rachel Parker</h3>
+<h3>Chamandeep Singh</h3>
 <span class="position mb-2">Health Coach</span>
 <div class="faded">
-<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+<p>BE Electronics & Communications 
+  ePGP IIM Kozhikode
+  Current Designation: Chief Technology Officer
+  Current Org:  Tata Communications Lanka Ltd
+  Past: VSNL</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -179,10 +188,12 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-7.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Ian Smith</h3>
-<span class="position mb-2">Health Coach</span>
+<h3>Jagatbir</h3>
+<span class="position mb-2">Mechanical 1994</span>
 <div class="faded">
-<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+<p>Current designation : Corporate Vice President
+  Current Organisation : WNS Global Services
+  Past designations and organizations : Delphi, Honeywell and IBM</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -199,10 +210,12 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-8.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Fred Henderson</h3>
-<span class="position mb-2">Executive Coach</span>
+<h3>Rachna Mahajan</h3>
+<span class="position mb-2">Electronics and Electrical Communication , 1994</span>
 <div class="faded">
-<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+<p>Director , Product and Technology Programs 
+Workday
+Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
