--- a/vet.html
+++ b/vet.html
@@ -19,26 +19,25 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-    <div class="container">
-      </span><img src="images/logo.jpg" style="width:10%;">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="fa fa-bars"></span> Menu
-      </button>
-      <div class="collapse navbar-collapse" id="ftco-nav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
+<div class="container">
+</span><img src="images/logo.jpg"style="width:10%;">
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+<span class="fa fa-bars"></span> Menu
+</button>
+<div class="collapse navbar-collapse" id="ftco-nav">
+<ul class="navbar-nav ml-auto">
+<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+<li class="nav-item"><a href="services.html" class="nav-link">Engineering Streams</a></li>
 
-          <li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
+<li class="nav-item active"><a href="vet.html" class="nav-link">Meet Thapar Alumni</a></li>
 
-          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
+<li class="nav-item"><a href="pricing.html" class="nav-link">FAQ's</a></li>
+<li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
+</ul>
+</div>
+</div>
+</nav>
 
 <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
 <div class="overlay"></div>
@@ -60,10 +59,10 @@
 <div class="img align-self-stretch" style="background-image: url(images/alumni/aditi.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Ajay Khanna</h3>
-<span class="position mb-2">Mechanical Engineer</span>
+<h3>Lloyd Wilson</h3>
+<span class="position mb-2">Health Coach</span>
 <div class="faded">
-<p>Vice president, marketing, Reltio. Worked in many organizations including Samtel, Honda Motors in India and Amdocs, Oracle, Veeva Systems in the US</p>
+<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -80,10 +79,10 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-2.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Gauri Singh Shandilaya</h3>
-<span class="position mb-2">1994 &amp; Civil Engineer</span>
+<h3>Rachel Parker</h3>
+<span class="position mb-2">Life &amp; Business Coach</span>
 <div class="faded">
-<p>Managing Director, Crystal Sanitary Fittings Pvt.Ltd.(ARK)</p>
+<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -100,12 +99,10 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-3.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Ajay Saran Sharma</h3>
-<span class="position mb-2">1994, Mechanical Engineer</span>
+<h3>Ian Smith</h3>
+<span class="position mb-2">Executive Coach</span>
 <div class="faded">
-<p>General Manager, Design Centre, Tata Motors  Maruti-Suzuki India  Daewoo Motors India  
-  M.Des., IIT-Delhi
-  ME, Mechanical, BITS-Pilani</p>
+<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -122,10 +119,10 @@
 <div class="img align-self-stretch" style="background-image: url(images/alumni/aditi.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Manoj Malhotra</h3>
-<span class="position mb-2">1994 Civil Engineering </span>
+<h3>Alicia Henderson</h3>
+<span class="position mb-2">Health Coach</span>
 <div class="faded">
-<p>Executive Engineer, DWSS, Punjab. Site Engineer, Siel Chemical Complex</p>
+<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -142,13 +139,10 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-5.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
- <h3>Jyotsna Gupta Saxena </h3>
+ <h3>Lloyd Wilson</h3>
 <span class="position mb-2">Executive Coach</span>
 <div class="faded">
-<p>1994 - EIC
-  Current designation: Self-employed
-  Current Organisation: self-employed 
-  Past designations and organizations: MT at EIL, AM at Punwire, TL at NIIT Ltd</p>
+<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -165,14 +159,10 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-6.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Chamandeep Singh</h3>
+<h3>Rachel Parker</h3>
 <span class="position mb-2">Health Coach</span>
 <div class="faded">
-<p>BE Electronics & Communications 
-  ePGP IIM Kozhikode
-  Current Designation: Chief Technology Officer
-  Current Org:  Tata Communications Lanka Ltd
-  Past: VSNL</p>
+<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -189,12 +179,10 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-7.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Jagatbir</h3>
-<span class="position mb-2">Mechanical 1994</span>
+<h3>Ian Smith</h3>
+<span class="position mb-2">Health Coach</span>
 <div class="faded">
-<p>Current designation : Corporate Vice President
-  Current Organisation : WNS Global Services
-  Past designations and organizations : Delphi, Honeywell and IBM</p>
+<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -211,12 +199,10 @@
 <div class="img align-self-stretch" style="background-image: url(images/staff-8.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Rachna Mahajan</h3>
-<span class="position mb-2">Electronics and Electrical Communication , 1994</span>
+<h3>Fred Henderson</h3>
+<span class="position mb-2">Executive Coach</span>
 <div class="faded">
-<p>Director , Product and Technology Programs 
-Workday
-Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
+<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
