--- a/faqs.html
+++ b/faqs.html
@@ -19,25 +19,26 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-<div class="container">
-</span><img src="images/logo.jpg"style="width:10%;">
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-<span class="fa fa-bars"></span> Menu
-</button>
-<div class="collapse navbar-collapse" id="ftco-nav">
-<ul class="navbar-nav ml-auto">
-<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-<li class="nav-item"><a href="services.html" class="nav-link">Engineering Streams</a></li>
+    <div class="container">
+      </span><img src="images/logo.jpg" style="width:10%;">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="fa fa-bars"></span> Menu
+      </button>
+      <div class="collapse navbar-collapse" id="ftco-nav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav-item active"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
-<li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
+          <li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
 
-<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-<li class="nav-item active"><a href="pricing.html" class="nav-link">FAQ's</a></li>
-<li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
-</ul>
-</div>
-</div>
-</nav>
+          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
+          <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li>
+          <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <section class="ftco-section bg-light ftco-faqs">
 <div class="container">
 <div class="row">
