--- a/streams.html
+++ b/streams.html
@@ -31,12 +31,12 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="services.html" class="nav-link">Engineering Streams</a></li>
+          <li class="nav-item active"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
           <li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="pricing.html" class="nav-link">FAQ's</a></li>
+          <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
         </ul>
       </div>
@@ -146,7 +146,7 @@
               <p>The Department of Electrical and Instrumentation Engineering has been playing a vital role in producing
                 scientists and technologists of highest calibre ever since it was established in the year 1956.
               </p>
-              <a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span
+              <a href="electrical.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
           </div>
