--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
       <!-- start copy from here  -->
     <!-- image map area starts  -->
     <div class="container">
-      <img class="newmap" src="images/newmap.png" alt="map" usemap="#map" />
+      <img class="newmap" src="images/newmap2.png" alt="map" usemap="#map" />
       <map name="map">
         <area
           shape="poly"
