--- a/csed.html
+++ b/csed.html
@@ -166,7 +166,7 @@
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
-<a href="#" class="btn btn-primary d-block px-2 py-3">Zoom Link</a>
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 </div>
 </div>
 </div>
@@ -176,7 +176,7 @@
 <div class="text-center p-4">
 <span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
 
-<a href="#" class="btn btn-primary d-block px-2 py-3">Zoom Link</a>
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 </div>
 </div>
 </div>
@@ -186,7 +186,7 @@
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
-<a href="#" class="btn btn-primary d-block px-2 py-3">Zoom Link</a>
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 </div>
 </div>
 </div>
