--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <p style="font-weight: bold;">ENGINEERING STREAMS</p>
 <p >Explore Different Streams</p>
 <p><a href="#" class="btn btn-primary mr-md-4 py-3 px-4">Join Exploratory Sessions <span class="ion-ios-arrow-forward"></span></a></p>
-<a href="services.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+<a href="streams.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 
 </div>
 </div>
