--- a/index.html
+++ b/index.html
@@ -290,14 +290,14 @@
                         <div class="col-xl-6 col-lg-8">
                             <div class="section-title text-center mb-80">
                                 <span class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".2s">Eagle Eye View</span>
-                                <h2 class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".4s">Thapar - Map</h2>
+                                <h1 class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".4s">Thapar - Map</h1>
                             </div>
                         </div>
                     </div>
 
       <!-- start copy from here  -->
     <!-- image map area starts  -->
-    <div class="container">
+    <div class="container" style="padding-bottom:100px;">
       <img class="newmap" src="images/newmap2.png" alt="map" usemap="#map" />
       <map name="map">
         <area
