--- a/gallery.html
+++ b/gallery.html
@@ -61,8 +61,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Cat</span>
-<h2><a href="work-single.html">Persian Cat</a></h2>
+<span>CSED</span>
+<h2><a href="work-single.html">New Building</a></h2>
 </div>
 </div>
 </div>
@@ -74,8 +74,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Dog</span>
-<h2><a href="work-single.html">Pomeranian</a></h2>
+<span>CSED</span>
+<h2><a href="work-single.html">Lecture Hall</a></h2>
 </div>
 </div>
 </div>
@@ -87,8 +87,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Cat</span>
-<h2><a href="work-single.html">Sphynx Cat</a></h2>
+<span>COS</span>
+<h2><a href="work-single.html">Market Place</a></h2>
 </div>
 </div>
 </div>
@@ -100,8 +100,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Cat</span>
-<h2><a href="work-single.html">British Shorthair</a></h2>
+<span>Hostel</span>
+<h2><a href="work-single.html">Boys Hostel-K</a></h2>
 </div>
 </div>
 </div>
@@ -113,8 +113,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Dog</span>
-<h2><a href="work-single.html">Beagle</a></h2>
+<span>Hostel</span>
+<h2><a href="work-single.html">Boys Hostel-J</a></h2>
 </div>
 </div>
 </div>
@@ -126,8 +126,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Dog</span>
-<h2><a href="work-single.html">Pug</a></h2>
+<span>Hall</span>
+<h2><a href="work-single.html">TAN Lecture Hall</a></h2>
 </div>
 </div>
 </div>
@@ -139,8 +139,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Cat</span>
-<h2><a href="work-single.html">British Shorthair</a></h2>
+<span>Hostel</span>
+<h2><a href="work-single.html">Boys Hostel-M</a></h2>
 </div>
 </div>
 </div>
@@ -152,8 +152,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Dog</span>
-<h2><a href="work-single.html">Beagle</a></h2>
+<span>Play</span>
+<h2><a href="work-single.html">Running Track</a></h2>
 </div>
 </div>
 </div>
@@ -165,8 +165,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Dog</span>
-<h2><a href="work-single.html">Pug</a></h2>
+<span>Night</span>
+<h2><a href="work-single.html">Nightscape</a></h2>
 </div>
 </div>
 </div>
