--- a/gallery.html
+++ b/gallery.html
@@ -40,17 +40,17 @@
     </div>
   </nav>
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
-<div class="overlay"></div>
+<!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5"> -->
+<!-- <div class="overlay"></div> -->
 <div class="container">
-<div class="row no-gutters slider-text align-items-end">
-<div class="col-md-9 ftco-animate pb-5">
-<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Gallery <i class="ion-ios-arrow-forward"></i></span></p>
+<!-- <div class="row no-gutters slider-text align-items-end"> -->
+<!-- <div class="col-md-9 ftco-animate pb-5"> -->
+<!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Gallery <i class="ion-ios-arrow-forward"></i></span></p> -->
 <h1 class="mb-0 bread">Gallery</h1>
 </div>
-</div>
-</div>
- </section>
+<!-- </div> -->
+<!-- </div> -->
+ <!-- </section> -->
 <section class="ftco-section">
 <div class="container">
 <div class="row">
