--- a/streams.html
+++ b/streams.html
@@ -43,21 +43,21 @@
     </div>
   </nav>
 
-  <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');"
-    data-stellar-background-ratio="0.5">
-    <div class="overlay"></div>
+  <!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" -->
+    <!-- data-stellar-background-ratio="0.5"> -->
+    <!-- <div class="overlay"></div> -->
     <div class="container">
-      <div class="row no-gutters slider-text align-items-end">
-        <div class="col-md-9 ftco-animate pb-5">
-          <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i
-                  class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i
-                class="ion-ios-arrow-forward"></i></span></p>
+      <!-- <div class="row no-gutters slider-text align-items-end"> -->
+        <!-- <div class="col-md-9 ftco-animate pb-5"> -->
+          <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i -->
+                  <!-- class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i -->
+                <!-- class="ion-ios-arrow-forward"></i></span></p> -->
           <h1 class="mb-0 bread">Engineering Streams</h1>
-        </div>
-      </div>
+        <!-- </div> -->
+      <!-- </div> -->
     </div>
-  </section>
-  <section class="ftco-section ftco-no-pt ftco-no-pb">
+  <!-- </section> -->
+  <!-- <section class="ftco-section ftco-no-pt ftco-no-pb">
     <div class="container">
       <div class="row d-flex no-gutters">
         <div class="col-md-5 d-flex">
@@ -65,7 +65,7 @@
             class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0"
             style="background-image:url(images/about-1.jpg);">
           </div>
-        </div>
+        </div> -->
         <!-- <div class="col-md-7 pl-md-5 py-md-5">
 <div class="heading-section pt-md-5">
 <h2 class="mb-4">Why Choose Us?</h2>
@@ -103,8 +103,8 @@
 </div>
 </div>
  -->
-      </div>
-  </section>
+      <!-- </div>
+  </section> -->
   <section class="ftco-section bg-light">
     <div class="container">
       <div class="row mb-5 pb-5">
