--- a/alumni.html
+++ b/alumni.html
@@ -228,6 +228,51 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 </div>
 </div>
 </section>
+<p style="font:150px; font-weight: bold;text-align: center;">SCHEDULE</p>
+<table class="table">
+  <thead class="black white-text">
+    <tr>
+      <th scope="col">Time</th>
+      <th scope="col">Department</th>
+      <th scope="col">Alumni</th>
+      <th scope="col">Link</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">11:30-12:30</th>
+      <td>Computer Science + MCA</td>
+      <td>TBD</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">12:30-1:30</th>
+      <td>Mechanical</td>
+      <td>Ajay Sharma, Ajay Khanna, Jagat Saluja</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">1:30-2:30</th>
+      <td>Electronics Electrical Instrumentation</td>
+      <td>Rachna,Jyotsna, Chaman</td>
+      <td>@twitter</td>
+    </tr>
+    <tr>
+      <th scope="row">2:30-3:30</th>
+      <td>Civil</td>
+      <td>Gauri,Manoj</td>
+      <td>@twitter</td>
+    </tr>
+    <tr>
+      <th scope="row">3:30-4:30</th>
+      <td>MBA+Liberal Arts+Masters and Others</td>
+      <td>Parampreet Thind, Hardeep Brar</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
+
+
 
 <footer class="footer">
 <div class="container">
