--- a/contact.html
+++ b/contact.html
@@ -39,17 +39,17 @@
 </div>
 </nav>
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
-<div class="overlay"></div>
-<div class="container">
-<div class="row no-gutters slider-text align-items-end">
-<div class="col-md-9 ftco-animate pb-5">
-<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Contact <i class="ion-ios-arrow-forward"></i></span></p>
-<h1 class="mb-0 bread">Contact</h1>
-</div>
-</div>
-</div>
- </section>
+<!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5"> -->
+<!-- <div class="overlay"></div> -->
+<!-- <div class="container"> -->
+<!-- <div class="row no-gutters slider-text align-items-end"> -->
+<!-- <div class="col-md-9 ftco-animate pb-5"> -->
+<!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Contact <i class="ion-ios-arrow-forward"></i></span></p> -->
+<!-- <h1 class="mb-0 bread">Contact</h1> -->
+<!-- </div> -->
+<!-- </div> -->
+<!-- </div> -->
+ <!-- </section> -->
 <section class="ftco-section bg-light">
 <div class="container">
 <div class="row justify-content-center">
