--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <h3 class="heading">Streams</h3>
 <p style="font-weight: bold;">ENGINEERING STREAMS</p>
 <p >Explore Different Streams</p>
-<p><a href="#" class="btn btn-primary mr-md-4 py-3 px-4">Join Exploratory Sessions <span class="ion-ios-arrow-forward"></span></a></p>
+<p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4">Join Exploratory Sessions <span class="ion-ios-arrow-forward"></span></a></p>
 <a href="streams.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 
 </div>
@@ -75,7 +75,7 @@
 <h3 class="heading">Thapar Alumni</h3>
 <p style="font-weight: bold;">MEET OUR ALUMNI</p>
 <p >at prestigious places</p>
-<p><a href="#" class="btn btn-primary mr-md-4 py-3 px-4">Ted Talks by Thapar Alumni <span class="ion-ios-arrow-forward"></span></a></p>
+<p><a href="alumni.html" class="btn btn-primary mr-md-4 py-3 px-4">Ted Talks by Thapar Alumni <span class="ion-ios-arrow-forward"></span></a></p>
 <a href="vet.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 
 </div>
@@ -90,7 +90,7 @@
 <h3 class="heading">FAQ's</h3>
 <p style="font-weight: bold;">FREQUENTLY ASKED QUESTIONS</p>
 <p >Have any doubts regarding the courses?</p>
-<p><a href="#" class="btn btn-primary mr-md-4 py-3 px-4">Contact Help Desk<span class="ion-ios-arrow-forward"></span></a></p>
+<p><a href="faqs.html" class="btn btn-primary mr-md-4 py-3 px-4">Contact Help Desk<span class="ion-ios-arrow-forward"></span></a></p>
 <a href="pricing.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 
 </div>
