--- a/csed.html
+++ b/csed.html
@@ -59,7 +59,7 @@
 
 
   <!-- team-area -->
-        <section id="team" class="team-area team-area-content p-relative pt-120 pb-120 fix">
+  <!--       <section id="team" class="team-area team-area-content p-relative pt-120 pb-120 fix">
             <div class="circal1 item-zoom-inout"></div>
             <div class="circal2 item-zoom-inout"></div>
             <div class="circal3 item-zoom-inout"></div>
@@ -91,7 +91,7 @@
 
 
 
-
+ -->
 
 
 
@@ -112,14 +112,14 @@
 <div class="heading-section pt-md-5">
 <h2 class="mb-4">Why Choose Us?</h2> -->
 </div>
- 
+ <!-- 
 <div class="row" style="padding-top: 50px;">
 <div class="col-md-6 services-2 w-100 d-flex">
 <div class="icon d-flex align-items-center justify-content-center">
 	<span class="fal fa-users"></span>
-
+ -->
 </div>
-<div class="text pl-3">
+<!-- <div class="text pl-3">
 <h4>Great Faculty</h4>
 <p>Improve your career prospects with our master's programme and study at our newly.</p>
 </div>
@@ -149,6 +149,7 @@
 </div>
 </div>
 </div>
+ -->
 </div>
 </div>
 </div>
@@ -157,7 +158,7 @@
 <div class="container">
 <div class="row justify-content-center pb-5 mb-3">
 <div class="col-md-7 heading-section text-center ftco-animate">
-<h2>Connect With Us</h2>
+<h2 style="padding-left:200px;">Connect With Us</h2>
 </div>
 </div>
 <div class="row">
@@ -194,6 +195,12 @@
 </div>
 </div>
 </section>
+
+<div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+	
+</div>
+
 
 
 
