faqs and csed update

--- a/csed.html
+++ b/csed.html
@@ -197,7 +197,7 @@
 </section>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+<a href="http://csed.thapar.edu/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
 	
 </div>
 
