--- a/alumni.html
+++ b/alumni.html
@@ -228,6 +228,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 </div>
 </div>
 </section>
+<div class="container">
 <p style="font:150px; font-weight: bold;text-align: center;">SCHEDULE</p>
 <table class="table">
   <thead class="black white-text">
@@ -271,7 +272,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
     </tr>
   </tbody>
 </table>
-
+</div>
 
 
 <footer class="footer">
