--- a/csed.html
+++ b/csed.html
@@ -42,14 +42,14 @@
 
 <!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5"> -->
 <!-- <div class="overlay"></div> -->
-<div class="container">
-<!-- <div class="row no-gutters slider-text align-items-end"> -->
-<!-- <div class="col-md-9 ftco-animate pb-5"> -->
-<!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
+<!-- <div class="container">
+<div class="row no-gutters slider-text align-items-end">
+<div class="col-md-9 ftco-animate pb-5">
+<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p>
 <h1 class="mb-0 bread">CSED</h1>
-<!-- </div> -->
-<!-- </div> -->
 </div>
+</div>
+</div> -->
 <!-- </section> -->
 
 
@@ -93,32 +93,24 @@
 
  -->
 
-
-
-
-
-
-
-
-
-<section class="ftco-section ftco-no-pt ftco-no-pb">
+<!-- <section class="ftco-section ftco-no-pt ftco-no-pb">
 <div class="container">
 <div class="row d-flex no-gutters">
-<div class="col-md-5 d-flex">
+<div class="col-md-5 d-flex"> -->
 <!-- <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about-1.jpg);">
 </div>
 </div>
 <div class="col-md-7 pl-md-5 py-md-5">
 <div class="heading-section pt-md-5">
 <h2 class="mb-4">Why Choose Us?</h2> -->
-</div>
+<!-- </div> -->
  <!-- 
 <div class="row" style="padding-top: 50px;">
 <div class="col-md-6 services-2 w-100 d-flex">
 <div class="icon d-flex align-items-center justify-content-center">
 	<span class="fal fa-users"></span>
  -->
-</div>
+<!-- </div> -->
 <!-- <div class="text pl-3">
 <h4>Great Faculty</h4>
 <p>Improve your career prospects with our master's programme and study at our newly.</p>
@@ -150,12 +142,20 @@
 </div>
 </div>
  -->
+<!-- </div>
 </div>
 </div>
-</div>
-</section>
+</section> -->
 <section class="ftco-section bg-light">
 <div class="container">
+  <div class="container">
+    <!-- <div class="row no-gutters slider-text align-items-end"> -->
+    <!-- <div class="col-md-9 ftco-animate pb-5"> -->
+    <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
+    <h1 class="mb-0 bread">CSED</h1>
+    <!-- </div> -->
+    <!-- </div> -->
+    </div>
 <div class="row justify-content-center pb-5 mb-3">
 <div class="col-md-7 heading-section text-center ftco-animate">
 <h2 style="padding-left:200px;">Connect With Us</h2>
