--- a/gallery.html
+++ b/gallery.html
@@ -172,7 +172,7 @@
 </div>
 </div>
 </div>
-<div class="row mt-5">
+<!-- <div class="row mt-5">
 <div class="col text-center">
 <div class="block-27">
 <ul>
@@ -187,7 +187,7 @@
 </div>
 </div>
 </div>
-</div>
+</div> -->
 </section>
 
 <footer class="footer">
