--- a/alumni.html
+++ b/alumni.html
@@ -228,7 +228,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 </div>
 </div>
 </section>
-<div class="container">
+<div class="container" style="margin-top:100px;">
 <p style="font:150px; font-weight: bold;text-align: center;">SCHEDULE</p>
 <table class="table">
   <thead class="black white-text">
@@ -275,7 +275,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 </div>
 
 
-<footer class="footer">
+<footer class="footer" style="margin-top:100px;">
 <div class="container">
 <div class="row">
 <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
