--- a/alumni.html
+++ b/alumni.html
@@ -46,7 +46,7 @@
 <!-- <div class="row no-gutters slider-text align-items-end"> -->
 <!-- <div class="col-md-9 ftco-animate pb-5"> -->
 <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Alumni <i class="ion-ios-arrow-forward"></i></span></p> -->
-<h1 class="mb-0 bread">Meet Our Alumni</h1>
+<h1 class="mb-0 bread">Interact with some of then thapar alumni</h1>
 <!-- </div> -->
 <!-- </div> -->
 </div>
