--- a/csed.html
+++ b/csed.html
@@ -148,14 +148,14 @@
 </section> -->
 <section class="ftco-section bg-light">
 <div class="container">
-  <div class="container">
+  <!-- <div class="container"> -->
     <!-- <div class="row no-gutters slider-text align-items-end"> -->
     <!-- <div class="col-md-9 ftco-animate pb-5"> -->
     <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
     <h1 class="mb-0 bread">CSED</h1>
     <!-- </div> -->
     <!-- </div> -->
-    </div>
+    <!-- </div> -->
 <div class="row justify-content-center pb-5 mb-3">
 <div class="col-md-7 heading-section text-center ftco-animate">
 <h2 style="padding-left:200px;">Connect With Us</h2>
