--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <section class="ftco-section bg-light ftco-no-pt ftco-intro">
 <div class="container">
 <div class="row">
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
+<div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
 <div class="d-block services  text-center">
 <div class="icon d-flex align-items-center justify-content-center">
 <img src="images/es.png"style="width:130%;">
@@ -66,7 +66,7 @@
 </div>
 </div>
 </div>
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
+<div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
 <div class="d-block services text-center">
 <div class="icon d-flex align-items-center justify-content-center">
 <img src="images/alumni.png"style="width:110%;">
@@ -75,13 +75,13 @@
 <h3 class="heading">Thapar Alumni</h3>
 <p style="font-weight: bold;">MEET OUR ALUMNI</p>
 <p >at prestigious places</p>
-<p><a href="alumni.html" class="btn btn-primary mr-md-4 py-3 px-4">Ted Talks by Thapar Alumni <span class="ion-ios-arrow-forward"></span></a></p>
+<p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;">Ted Talks by Alumni <span class="ion-ios-arrow-forward"></span></a></p>
 <a href="vet.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+</div>
+</div>
+</div>
 
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
+<div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
 <div class="d-block services text-center">
 <div class="icon d-flex align-items-center justify-content-center">
 <img src="images/faq.png"style="width:100%;">
@@ -92,7 +92,21 @@
 <p >Have any doubts regarding the courses?</p>
 <p><a href="faqs.html" class="btn btn-primary mr-md-4 py-3 px-4">Contact Help Desk<span class="ion-ios-arrow-forward"></span></a></p>
 <a href="pricing.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+</div>
+</div>
+</div>
 
+<div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
+<div class="d-block services text-center">
+<div class="icon d-flex align-items-center justify-content-center">
+<img src="images/faq.png"style="width:100%;">
+</div>
+<div class="media-body">
+<h3 class="heading">FAQ's</h3>
+<p style="font-weight: bold;">FREQUENTLY ASKED QUESTIONS</p>
+<p >Have any doubts regarding the courses?</p>
+<p><a href="faqs.html" class="btn btn-primary mr-md-4 py-3 px-4">Contact Help Desk<span class="ion-ios-arrow-forward"></span></a></p>
+<a href="pricing.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 </div>
 </div>
 </div>
