--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <h3 class="heading">Streams</h3>
 <p style="font-weight: bold;">ENGINEERING STREAMS</p>
 <p >Explore Different Streams</p>
-<p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4">Join Exploratory Sessions <span class="ion-ios-arrow-forward"></span></a></p>
+<p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4">Streams & Branches<span class="ion-ios-arrow-forward"></span></a></p>
 <a href="streams.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 
 </div>
@@ -75,7 +75,7 @@
 <h3 class="heading">Thapar Alumni</h3>
 <p style="font-weight: bold;">MEET OUR ALUMNI</p>
 <p >at prestigious places</p>
-<p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;">Ted Talks by Alumni <span class="ion-ios-arrow-forward"></span></a></p>
+<p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;">Sessions by Alumni <span class="ion-ios-arrow-forward"></span></a></p>
 <a href="vet.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 </div>
 </div>
@@ -303,7 +303,7 @@
                     <div class="row justify-content-center" style="padding-top:100px;padding-bottom:50px">
                         <div class="col-xl-6 col-lg-8">
                             <div class="section-title text-center mb-80">
-                                <span class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".2s">Eagle Eye View</span>
+                                <span class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".2s"><strong>Eagle Eye View</strong></span>
                                 <h1 class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".4s">Thapar - Map</h1>
                             </div>
                         </div>
