--- a/streams.html
+++ b/streams.html
@@ -36,7 +36,7 @@
           <li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li>
+          <!-- <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li> -->
           <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
         </ul>
       </div>
@@ -204,8 +204,8 @@
 
 
 
-      <div class="row mt-5 pt-4">
-        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
+      <div class="row mt-5 pt-4" >
+        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
               <img class="logosize" src="images/department/microscope.png">
@@ -219,7 +219,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
+        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate"  style="margin-top: 70px;">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
               <img class="logosize" src="images/department/Group 2282.png">
