--- a/vet.html
+++ b/vet.html
@@ -32,7 +32,7 @@
 <li class="nav-item active"><a href="vet.html" class="nav-link">Meet Thapar Alumni</a></li>
 
 <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-<li class="nav-item"><a href="pricing.html" class="nav-link">FAQ's</a></li>
+<!-- <li class="nav-item"><a href="pricing.html" class="nav-link">FAQ's</a></li> -->
 <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
 </ul>
 </div>
