--- a/alumni.html
+++ b/alumni.html
@@ -46,7 +46,7 @@
 <!-- <div class="row no-gutters slider-text align-items-end"> -->
 <!-- <div class="col-md-9 ftco-animate pb-5"> -->
 <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Alumni <i class="ion-ios-arrow-forward"></i></span></p> -->
-<h1 class="mb-0 bread">Interact with some of then thapar alumni</h1>
+<h1 class="mb-0 bread">Interact with some of the thapar alumni</h1>
 <!-- </div> -->
 <!-- </div> -->
 </div>
@@ -61,9 +61,12 @@
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Ajay Khanna</h3>
-<span class="position mb-2">Mechanical Engineer</span>
+<span class="position mb-2">1994,Mechanical Engineer</span>
 <div class="faded">
-<p>Vice president, marketing, Reltio. Worked in many organizations including Samtel, Honda Motors in India and Amdocs, Oracle, Veeva Systems in the US</p>
+<p>Vice president, marketing, Reltio. <br> Worked in organizations like Samtel, Honda Motors in India and Amdocs, Oracle, Veeva Systems in the US</p>
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME:   </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -81,9 +84,14 @@
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Gauri Singh Shandilaya</h3>
-<span class="position mb-2">1994 &amp; Civil Engineer</span>
+<span class="position mb-2">1994,Civil Engineer</span>
 <div class="faded">
 <p>Managing Director, Crystal Sanitary Fittings Pvt.Ltd.(ARK)</p>
+<br><br><br>
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME:   </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -106,6 +114,10 @@
 <p>General Manager, Design Centre, Tata Motors  Maruti-Suzuki India  Daewoo Motors India  
   M.Des., IIT-Delhi
   ME, Mechanical, BITS-Pilani</p>
+  <br>
+  <p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME:   </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -123,9 +135,13 @@
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Manoj Malhotra</h3>
-<span class="position mb-2">1994 Civil Engineering </span>
+<span class="position mb-2">1994 ,Civil Engineer </span>
 <div class="faded">
 <p>Executive Engineer, DWSS, Punjab. Site Engineer, Siel Chemical Complex</p>
+<br><br><br>
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME:   </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -143,11 +159,14 @@
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
  <h3>Jyotsna Gupta Saxena </h3>
-<span class="position mb-2">1994 - EIC</span>
+<span class="position mb-2">1994 ,Electronics (Instrumentation and Control) Engineer</span>
 <div class="faded">
 <p>
   Current designation: Self-employed
   Past designations and organizations: MT at EIL, AM at Punwire, TL at NIIT Ltd</p>
+  <p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME:   </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -165,13 +184,17 @@
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Chamandeep Singh</h3>
-<span class="position mb-2">BE Electronics & Communications </span>
+<span class="position mb-2">1994, Electronics & Communication Engineer </span>
 <div class="faded">
 <p>
 Chief Technology Officer, Tata Communications Lanka Ltd
   Past: VSNL
   ePGP IIM Kozhikode
 </p>
+<br>
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME:   </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -189,10 +212,14 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Jagatbir</h3>
-<span class="position mb-2">Mechanical 1994</span>
+<span class="position mb-2">1994, Mechanical Engineer </span>
 <div class="faded">
 <p>Corporate Vice President, WNS Global Services
   Past designations and organizations : Delphi, Honeywell and IBM</p>
+  <br>
+  <p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME:   </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -210,11 +237,66 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Rachna Mahajan</h3>
-<span class="position mb-2">Electronics and Electrical Communication , 1994</span>
+<span class="position mb-2">1994,Electronics and Electrical Communication </span>
 <div class="faded">
 <p>Director , Product and Technology Programs 
 Workday
 Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME:   </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<ul class="ftco-social text-center">
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-6 col-lg-3 ftco-animate">
+<div class="staff">
+<div class="img-wrap d-flex align-items-stretch">
+<div class="img align-self-stretch" style="background-image: url(images/alumni/brar.jpeg);"></div>
+</div>
+<div class="text pt-3 px-3 pb-4 text-center">
+<h3>Hardeep Brar</h3>
+<span class="position mb-2">1994, Mechanical Engineer</span>
+
+<div class="faded">
+<p>Director of Sales and Marketing, Great Wall Motor</p>
+<br>
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME:   </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+
+<ul class="ftco-social text-center">
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-6 col-lg-3 ftco-animate">
+<div class="staff">
+<div class="img-wrap d-flex align-items-stretch">
+<div class="img align-self-stretch" style="background-image: url(images/alumni/thind.jpeg);"></div>
+</div>
+<div class="text pt-3 px-3 pb-4 text-center">
+<h3>Param Thind</h3>
+<span class="position mb-2">1994, Mechanical Engineer</span>
+<div class="faded">
+<p>Director, Global Transaction Services 
+Bank of America, Hong Kong 
+Deutsche Bank</p>
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME:   </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -229,14 +311,15 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 </div>
 </section>
 <div class="container" style="margin-top:100px;">
-<p style="font:150px; font-weight: bold;text-align: center;">SCHEDULE</p>
+<p style="font:250px; font-weight: bold;text-align: center;color:#640000">SCHEDULE</p>
 <table class="table">
-  <thead class="black white-text">
+  <thead class="thead-dark">
+  
     <tr>
-      <th scope="col">Time</th>
-      <th scope="col">Department</th>
-      <th scope="col">Alumni</th>
-      <th scope="col">Link</th>
+      <th scope="col" style="color:white">Time</th>
+      <th scope="col"style="color:white">Department</th>
+      <th scope="col"style="color:white">Alumni</th>
+      <th scope="col"style="color:white">Link</th>
     </tr>
   </thead>
   <tbody>
